- Replaced old CSS var by primary/secondary - Added new tailwind gradien based on primary/secondary

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,8 +3,8 @@
 @import 'tailwindcss/utilities';
 
 :root {
-  --blue-dark: #000321;
-  --blue-darker: hsl(235, 100%, 3%);
+  --color-primary: #00031f;
+  --color-secondary: #ffb700;
 }
 
 @layer base {
